--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,50 @@
-$primary-color: #444;
+// Margin && Padding helpers
+
+$spaceamounts: (5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 75, 100); // Adjust this to include the pixel amounts you need.
+$sides: (top, bottom, left, right); // Leave this variable alone
+
+@each $space in $spaceamounts {
+  @each $side in $sides {
+    .m-#{str-slice($side, 0, 1)}-#{$space} {
+      margin-#{$side}: #{$space}px !important;
+    }
+  
+    .p-#{str-slice($side, 0, 1)}-#{$space} {
+      padding-#{$side}: #{$space}px !important;
+    }
+  }
+}
+
+
+
+
+///////////////////////////// Global /////////////////////////////
+
+
+//sidebar
+.sidebar {
+    background-color: #fafafa;
+    height: 100%;
+    display: block;
+    color: #000;
+    border-radius: 3px;
+    box-shadow: 3px 3px 0px #bababa;
+}
+
+.listing {
+    background-color: #fafafa;
+    display: block;
+    border-radius: 3px;
+    box-shadow: 3px 3px 0px #bababa;
+}
+
+
+//footer
+.footer {
+  margin-top: 75px;
+  width: 100%;
+  bottom: 0px;
+  background: #F46197;
+}
+
+
