--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,9 +42,28 @@ $sides: (top, bottom, left, right); // Leave this variable alone
 //footer
 .footer {
   margin-top: 75px;
+  position: fixed;
   width: 100%;
-  bottom: 0px;
+  left: 0;
+  bottom: 0;
   background: #F46197;
+}
+
+///////////////////////////// Socials /////////////////////////////
+
+// Twitter
+.twitter {
+  color: #00aced;
+}
+
+// Discord
+.discord {
+  color: #7289da;
+}
+
+//Telegram
+.telegram {
+  color: #0088cc;
 }
 
 
