--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -14,7 +14,7 @@
     <section class="section">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="https://bulma.io">
+                <a class="navbar-item" href="/">
                     <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
                 </a>
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -25,12 +25,12 @@
             </div>
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item">About</a>
+                    <a href="/about" class="navbar-item">About</a>
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link">More</a>
                         <div class="navbar-dropdown">
-                            <a class="navbar-item">Community</a>
-                            <a class="navbar-item">Contact</a>
+                            <a href="/community" class="navbar-item">Community</a>
+                            <a href="/contact" class="navbar-item">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -38,8 +38,8 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button is-primary"><strong>Sign up</strong></a>
-                            <a class="button is-light">Log in</a>
+                            <a href="/register" class="button is-primary"><strong>Sign up</strong></a>
+                            <a href="/login" class="button is-light">Log in</a>
                         </div>
                     </div>
                 </div>
