--- a/public/css/main.css
+++ b/public/css/main.css
@@ -290,7 +290,6 @@
   background-color: #fafafa;
   height: 100%;
   display: block;
-  color: #000;
   border-radius: 3px;
   box-shadow: 3px 3px 0px #bababa; }
 
@@ -300,13 +299,16 @@
   border-radius: 3px;
   box-shadow: 3px 3px 0px #bababa; }
 
+.form-bg {
+  background-color: #fafafa;
+  display: block;
+  height: 75%;
+  padding: 30px;
+  border-radius: 3px;
+  box-shadow: 3px 3px 0px #bababa; }
+
 .footer {
   margin-top: 75px;
-<<<<<<< HEAD
-  width: 100%;
-  bottom: 0px;
-  background: #F46197; }
-=======
   position: fixed;
   width: 100%;
   left: 0;
@@ -321,4 +323,3 @@
 
 .telegram {
   color: #0088cc; }
->>>>>>> waqar
