--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,7 +20,6 @@ $sides: (top, bottom, left, right); // Leave this variable alone
 
 ///////////////////////////// Global /////////////////////////////
 
-
 //sidebar
 .sidebar {
     background-color: #fafafa;
@@ -47,10 +46,19 @@ $sides: (top, bottom, left, right); // Leave this variable alone
 }
 
 
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
+}
+
 //footer
 .footer {
   margin-top: 75px;
-  position: fixed;
   width: 100%;
   left: 0;
   bottom: 0;
