--- a/views/about.ejs
+++ b/views/about.ejs
@@ -16,6 +16,5 @@ Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots 
         </div> <!-- end about-->
     </div>
 </div>
-
-
+</main>
 <%- include('inc/footer') %>
