--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,4 +203,5 @@
                 </div>
             </div> <!--main columns-->
     </section><!-- main body-->
+</main>
 <%- include('inc/footer') %>
