--- a/views/hirer/register.ejs
+++ b/views/hirer/register.ejs
@@ -30,6 +30,18 @@
 
             <div class="field columns">
                 <div class="column">
+                    <label class="label">Email</label>
+                    <div class="control has-icons-left">
+                        <input class="input" type="email" placeholder="Email">
+                        <span class="icon is-small is-left">
+                        <i class="fas fa-envelope"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="field columns">
+                <div class="column">
                     <label class="label">Password</label>
                     <div class="control has-icons-left">
                         <input class="input" type="password" placeholder="Password">
@@ -49,38 +61,18 @@
                 </div>
             </div>
 
-            <div class="field columns">
-                <div class="column">
-                    <label class="label">Email</label>
-                    <div class="control has-icons-left">
-                        <input class="input" type="email" placeholder="Email">
-                        <span class="icon is-small is-left">
-                        <i class="fas fa-envelope"></i>
-                        </span>
+            <div class="column is-pulled-right">
+                    <div class="field">
+                        <div class="control">
+                            <div></div>
+                            <button class="button is-success is-link"><i class="fas fa-user-plus m-r-5"></i>Register</button>
+                        </div>
                     </div>
-                </div>
-                <div class="column">
-                    <label class="label">Confirm Email</label>
-                    <div class="control has-icons-left">
-                        <input class="input" type="email" placeholder="Confirm email">
-                        <span class="icon is-small is-left">
-                        <i class="fas fa-envelope"></i>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <label class="checkbox">
-                <input type="checkbox" class="m-r-10 m-b-20">I agree to your <a href="#">terms</a>.
-            </label>
-            <div class="field">
-                <div class="control">
-                    <button class="button is-link">Submit</button>
-                </div>
             </div>
         </div>
     </div>
 </div>
-
+</main>
 
 
 <%- include('../inc/footer') %>
