--- a/views/inc/footer.ejs
+++ b/views/inc/footer.ejs
@@ -2,15 +2,16 @@
 <section>
     <footer class="footer">
         <div class="content has-text-centered">
-            <p>
-                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-            </p>
+            <div id="typo" class="bd-typo">
+                <p class="has-text-grey-light">
+                <a href="https://bulma.io/made-with-bulma/">
+                    <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+                </a>
+                </p>
+            </div>
         </div>
     </footer>
 </section>
-
 
 </body>
 </html>
