Added Signup for Hirer and Candidate

--- a/views/hirer/register.ejs
+++ b/views/hirer/register.ejs
@@ -6,12 +6,12 @@
             <p class="subtitle is-4 m-t-50">
                 You're help changing the face of tech. So thank you, thank you and ❤️ ❤️ ❤️ ❤️
             </p>
-        <div class="m-t-30">
+        <form class="m-t-30" action="/hirer/register" method="POST">
             <div class="field columns">
                 <div class="column">
                     <label class="label">First Name</label>
                     <div class="control has-icons-left">
-                        <input class="input" type="text" placeholder="First Name">
+                        <input class="input" type="text" placeholder="First Name" name="firstName" value="<%= locals.userInput ? userInput.firstName : ''%>">
                         <span class="icon is-small is-left">
                         <i class="fas fa-user"></i>
                         </span>
@@ -20,7 +20,7 @@
                 <div class="column">
                     <label class="label">Last Name</label>
                     <div class="control has-icons-left">
-                        <input class="input" type="text" placeholder="Last Name">
+                        <input class="input" type="text" placeholder="Last Name" name="lastName" value="<%= locals.userInput ? userInput.lastName : ''%>">
                         <span class="icon is-small is-left">
                         <i class="fas fa-user"></i>
                         </span>
@@ -32,7 +32,7 @@
                 <div class="column">
                     <label class="label">Email</label>
                     <div class="control has-icons-left">
-                        <input class="input" type="email" placeholder="Email">
+                        <input class="input" type="email" placeholder="Email" name="email" value="<%= locals.userInput ? userInput.email : ''%>">
                         <span class="icon is-small is-left">
                         <i class="fas fa-envelope"></i>
                         </span>
@@ -44,7 +44,7 @@
                 <div class="column">
                     <label class="label">Password</label>
                     <div class="control has-icons-left">
-                        <input class="input" type="password" placeholder="Password">
+                        <input class="input" type="password" placeholder="Password" name="password" value="<%= locals.userInput ? userInput.password : ''%>">
                         <span class="icon is-small is-left">
                         <i class="fas fa-lock"></i>
                         </span>
@@ -53,7 +53,7 @@
                 <div class="column">
                     <label class="label">Confirm Password</label>
                     <div class="control has-icons-left">
-                        <input class="input" type="password" placeholder="Confirm Password">
+                        <input class="input" type="password" placeholder="Confirm Password" name="confirmPassword">
                         <span class="icon is-small is-left">
                         <i class="fas fa-lock"></i>
                         </span>
@@ -69,7 +69,7 @@
                         </div>
                     </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
 </main>
