Logout button in profile dropdown

--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -60,20 +60,20 @@
                     <div class="navbar-menu">
                         <div class="navbar-end p-r-15">
                             <div class="navbar-item has-dropdown is-hoverable ">
-                                <a class="navbar-link"><i class="fas fa-user-circle m-r-5"></i>Manage Profile</a>
+                                <a class="navbar-link"><i class="fas fa-user-circle fa-lg m-r-5"></i>Manage Profile</a>
                                 <div class="navbar-dropdown is-right">
                                     <a class="navbar-item">Edit Profile</a>
                                     <a class="navbar-item">Elements</a>
                                     <a class="navbar-item">Components</a>
+                                    <hr class="navbar-divider">
                                     <form action="/logout" method="POST">
-                                        <button class="navbar-item">Logout</button>
+                                        <a class="navbar-item"><i class="fas fa-sign-out-alt fa-lg m-r-5" aria-hidden="true"></i>Log Out</a>
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </nav>
-
                 <% } %>
             </div>
         </nav>
