Fixed menu dropdown with icons, hid register links in header when logged in, changed footer height

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -320,7 +320,8 @@ body {
   width: 100%;
   left: 0;
   bottom: 0;
-  background: #F46197; }
+  background: #F46197;
+  height: 50px; }
 
 .twitter {
   color: #00aced; }
