--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,6 +63,7 @@ body {
   left: 0;
   bottom: 0;
   background: #F46197;
+  height: 50px;
 }
 
 ///////////////////////////// Socials /////////////////////////////
