--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,22 @@
                         </p>
                     </div> <!-- intro-->
 
-                    <div class="m-t-100"></div>
-                    <div class="columns">
-                        <div class="m-t-15 m-r-10 listing column">
+                    <div class="m-t-50"></div>
+
+                    <div class="field is-horizontal listing">
+                        <div class="field-label is-medium">
+                            <label class="label">Search</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                            <div class="control">
+                                <input class="input is-medium is-three-quarters" type="text" placeholder="Search results by location, role, or stack">
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="m-t-50"></div>
+                        <div class="listing">
                             <article class="media p-t-10 p-l-10">
                                 <figure class="media-left">
                                     <p class="image is-75x75">
@@ -23,11 +36,11 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p class="is-size-5">
-                                            <strong class="is-size-4"> Company Name</strong><br>
-                                            <i class="far fa-user"></i> Javascript Developer<br>
-                                            <i class="fas fa-map-marker-alt m-r-10"></i>Location
+                                            <strong class="is-size-4"> 💼 Company Name</strong><span class="m-l-20 m-r-10 is-size-4">🗺</span>Location<br>
+                                            <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
                                         </p>
                                     </div>
+                                    <p class="is-pulled-left button is-text">Details</p>
                                     <nav class="level is-mobile is-pulled-right">
                                         <div class="level-left">
                                             <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
@@ -41,37 +54,7 @@
                             </article>
                         </div><!-- job listing-->
 
-                        <div class="m-t-15 m-r-10 listing column">
-                            <article class="media p-t-10 p-l-10">
-                                <figure class="media-left">
-                                    <p class="image is-100x100">
-                                        <img src="https://bulma.io/images/placeholders/128x128.png">
-                                    </p>
-                                </figure>
-                                <div class="media-content">
-                                    <div class="content">
-                                        <p class="is-size-5">
-                                            <strong class="is-size-4">Company Name</strong><br>
-                                            <i class="far fa-user"></i> Javascript Developer<br>
-                                            <i class="fas fa-map-marker-alt m-r-10"></i>Location
-                                        </p>
-                                    </div>
-                                    <nav class="level is-mobile is-pulled-right">
-                                        <div class="level-left">
-                                            <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
-                                            <a class="level-item button is-success"><i class="fas fa-pen m-r-5"></i>Apply</a>
-                                            <a class="level-item">
-                                                <span class="icon is-small"></i></span>
-                                            </a>
-                                        </div>
-                                    </nav>
-                                </div>
-                            </article>
-                        </div><!-- job listing-->
-                    </div> <!-- job listing column-->
-
-                    <div class="columns">
-                        <div class="m-t-15 m-r-10 listing column">
+                        <div class="listing">
                             <article class="media p-t-10 p-l-10">
                                 <figure class="media-left">
                                     <p class="image is-75x75">
@@ -81,69 +64,26 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p class="is-size-5">
-                                            <strong class="is-size-4"> Company Name</strong><br>
-                                            <i class="far fa-user"></i> Javascript Developer<br>
-                                            <i class="fas fa-map-marker-alt m-r-10"></i>Location
+                                            <strong class="is-size-4"> 💼 Company Name</strong><span class="m-l-20 m-r-10 is-size-4">🗺</span>Location<br>
+                                            <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
                                         </p>
                                     </div>
-                                    <nav class="level is-mobile is-pulled-right">
-                                        <div class="level-left">
-                                            <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
-                                            <a class="level-item button is-success"><i class="fas fa-pen m-r-5"></i>Apply</a>
-                                            <a class="level-item">
-                                                <span class="icon is-small"></i></span>
-                                            </a>
-                                        </div>
-                                    </nav>
-                                </div>
-                            </article>
-                        </div><!-- job listing-->
-                    
-                        <div class="m-t-15 m-r-10 listing column">
-                            <article class="media p-t-10 p-l-10">
-                                <figure class="media-left">
-                                    <p class="image is-100x100">
-                                        <img src="https://bulma.io/images/placeholders/128x128.png">
+                                    <hr class="navbar-divider">
+                                    <h4 class="is-size-4 m-b-5">About the Company</h4>
+                                    <p>
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
                                     </p>
-                                </figure>
-                                <div class="media-content">
-                                    <div class="content">
-                                        <p class="is-size-5">
-                                            <strong class="is-size-4">Company Name</strong><br>
-                                            <i class="far fa-user"></i> Javascript Developer<br>
-                                            <i class="fas fa-map-marker-alt m-r-10"></i>Location
-                                        </p>
-                                    </div>
-                                    <nav class="level is-mobile is-pulled-right">
-                                        <div class="level-left">
-                                            <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
-                                            <a class="level-item button is-success"><i class="fas fa-pen m-r-5"></i>Apply</a>
-                                            <a class="level-item">
-                                                <span class="icon is-small"></i></span>
-                                            </a>
-                                        </div>
-                                    </nav>
-                                </div>
-                            </article>
-                        </div><!-- job listing-->
-                    </div> <!-- job listing column-->
 
-                    <div class="columns">
-                        <div class="m-t-15 m-r-10 listing column">
-                            <article class="media p-t-10 p-l-10">
-                                <figure class="media-left">
-                                    <p class="image is-75x75">
-                                        <img src="https://bulma.io/images/placeholders/128x128.png">
+                                    <h4 class="is-size-4 m-t-10 m-b-5">The Role</h4>
+                                    <p>
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
                                     </p>
-                                </figure>
-                                <div class="media-content">
-                                    <div class="content">
-                                        <p class="is-size-5">
-                                            <strong class="is-size-4"> Company Name</strong><br>
-                                            <i class="far fa-user"></i> Javascript Developer<br>
-                                            <i class="fas fa-map-marker-alt m-r-10"></i>Location
-                                        </p>
-                                    </div>
+
+                                     <h4 class="is-size-4 m-t-10 m-b-5">About You</h4>
+                                    <p>
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                                    </p>
+                                    
                                     <nav class="level is-mobile is-pulled-right">
                                         <div class="level-left">
                                             <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
@@ -156,39 +96,11 @@
                                 </div>
                             </article>
                         </div><!-- job listing-->
-                    
-                        <div class="m-t-15 m-r-10 listing column">
-                            <article class="media p-t-10 p-l-10">
-                                <figure class="media-left">
-                                    <p class="image is-100x100">
-                                        <img src="https://bulma.io/images/placeholders/128x128.png">
-                                    </p>
-                                </figure>
-                                <div class="media-content">
-                                    <div class="content">
-                                        <p class="is-size-5">
-                                            <strong class="is-size-4">Company Name</strong><br>
-                                            <i class="far fa-user"></i> Javascript Developer<br>
-                                            <i class="fas fa-map-marker-alt m-r-10"></i>Location
-                                        </p>
-                                    </div>
-                                    <nav class="level is-mobile is-pulled-right">
-                                        <div class="level-left">
-                                            <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
-                                            <a class="level-item button is-success"><i class="fas fa-pen m-r-5"></i>Apply</a>
-                                            <a class="level-item">
-                                                <span class="icon is-small"></i></span>
-                                            </a>
-                                        </div>
-                                    </nav>
-                                </div>
-                            </article>
-                        </div><!-- job listing-->
-                    </div> <!-- job listing column-->
+
                 </div> <!-- first column-->
 
                 <div class="column sidebar m-r-50">
-                    <h4 class="title is-4 p-t-20">Post a Job</h4>
+                    <a class="button is-large is-fullwidth is-primary m-t-20 m-b-20">Post a Job</a>
                     <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so will
                     be great in helping you candidates grow in their first role 🎉.</p>
                     <h4 class="title is-4 p-t-20">Post a Job</h4>
